--- a/BACK-UBER-APP/src/main/resources/application.properties
+++ b/BACK-UBER-APP/src/main/resources/application.properties
@@ -1,1 +1,37 @@
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+#spring.datasource.password=sasa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:~/uber spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:/data/demo
 
+spring.jpa.defer-datasource-initialization=true
+
+spring.h2.console.enabled=true
+#spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.sql.init.mode=always
+
+#spring.main.allow-circular-references = true
+
+spring.main.allow-circular-references = true
+
+
+#email configuration
+spring.mail.host=smtp.ethereal.email
+spring.mail.port=587
+spring.mail.username=eugene4@ethereal.email
+spring.mail.password=b7s7DtvJBBvtQgFkVs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#google oauth
+spring.security.oauth2.client.registration.google.client-id=450547483794-8i51kquiemjeircjrh33d0tnk6d942ci.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
