--- a/BACK-UBER-APP/src/main/resources/application.properties
+++ b/BACK-UBER-APP/src/main/resources/application.properties
@@ -31,7 +31,11 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 #google oauth
-spring.security.oauth2.client.registration.google.client-id=450547483794-8i51kquiemjeircjrh33d0tnk6d942ci.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=450547483794-u7usqmlhrtr11e0psoef0ghck73sb25u.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
-spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+#spring.security.oauth2.client.registration.google.redirectUriTemplate: "http://localhost:8080/auth/login/oauth2/code/google"
+#spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+#spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+#spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+#spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
