--- a/FRONT-UBER-APP/package.json
+++ b/FRONT-UBER-APP/package.json
@@ -11,13 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.2",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/localize": "^15.2.2",
+    "@angular/material": "^15.2.2",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.6",
+    "angular-bootstrap-md": "^15.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "d3": "^7.8.2",
+    "font-awesome": "^4.7.0",
     "leaflet": "^1.8.0",
     "leaflet-routing-machine": "^3.2.12",
     "rxjs": "~7.8.0",
@@ -28,6 +40,7 @@
     "@angular-devkit/build-angular": "^15.2.2",
     "@angular/cli": "~15.2.2",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.1",
     "@types/leaflet-routing-machine": "^3.2.4",
