--- a/FRONT-UBER-APP/tsconfig.json
+++ b/FRONT-UBER-APP/tsconfig.json
@@ -1,3 +1,5 @@
+
+
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
@@ -19,6 +21,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "typeRoots": [
+      "node_modules/@types",
+      "src"
+    ],
     "lib": [
       "ES2022",
       "dom"
