Backend finished. Added web sockets and chat app.

--- a/BACK-UBER-APP/pom.xml
+++ b/BACK-UBER-APP/pom.xml
@@ -138,6 +138,11 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.mapbox.mapboxsdk/mapbox-sdk-geojson -->
 		<dependency>
 			<groupId>com.mapbox.mapboxsdk</groupId>
