Selenium tests finished.

--- a/FRONT-UBER-APP/angular.json
+++ b/FRONT-UBER-APP/angular.json
@@ -90,8 +90,7 @@
           "options": {
             "polyfills": [
               "zone.js",
-              "zone.js/testing",
-              "src/polyfills.ts"
+              "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
@@ -103,8 +102,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/leaflet/dist/leaflet.js",
-              "node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.js"
+
             ]
           }
         }
